--- a/SpringExpert/SpringExpert/src/main/resources/application.properties
+++ b/SpringExpert/SpringExpert/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.profiles.active=production
+#spring.profiles.active=prod
 
-server.port=8081
+server.port=8080
 #server.servlet.context-path=/sistema-vendas
 
 spring.datasource.url=jdbc:h2:mem:testdb 
