--- a/SpringExpert/SpringExpert/src/main/resources/application.properties
+++ b/SpringExpert/SpringExpert/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 spring.datasource.url=jdbc:h2:mem:testdb 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=pass
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
