Gerando Token jwt

--- a/SpringExpert/SpringExpert/src/main/resources/application.properties
+++ b/SpringExpert/SpringExpert/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.properties.hibernate.format_sql=true
 #InternacionalizacaoConfig
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+security.jwt.expiracao=30
+secutiry.jwt.chave-assinatura=YSBsZW1icmUgw6kgYnJhbmNh
