--- a/SpringExpert/SpringExpert/src/main/resources/application.properties
+++ b/SpringExpert/SpringExpert/src/main/resources/application.properties
@@ -1,16 +1,8 @@
-#spring.profiles.active=prod
-
-server.port=8080
-#server.servlet.context-path=/sistema-vendas
-
-spring.datasource.url=jdbc:h2:mem:testdb 
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=pass
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:mysql://localhost:3306/vendas?useTimezone=true&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
