--- a/SpringExpert/SpringExpert/src/main/resources/application.properties
+++ b/SpringExpert/SpringExpert/src/main/resources/application.properties
@@ -13,3 +13,5 @@ server.error.include-binding-errors=always
 
 security.jwt.expiracao=30
 secutiry.jwt.chave-assinatura=YSBsZW1icmUgw6kgYnJhbmNh
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
