--- a/SpringExpert/SpringExpert/pom.xml
+++ b/SpringExpert/SpringExpert/pom.xml
@@ -1,20 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.4.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+
+	<profiles>
+
+		<profile>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<id>desenvolvimento</id>
+			<properties>
+				<project-packaging>jar</project-packaging>
+				<tomcat.scope>compile</tomcat.scope>
+			</properties>
+		</profile>
+
+
+		<profile>
+			<id>producao</id>
+			<properties>
+				<project-packaging>war</project-packaging>
+				<tomcat.scope>provided</tomcat.scope>
+			</properties>
+		</profile>
+
+	</profiles>
+
 	<groupId>io.github.PatrickRiibeio</groupId>
 	<artifactId>SpringExpert</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>${project-packaging}</packaging>
+
+
 	<name>SpringExpert</name>
 	<description>Spring Boot Expert: JPA, RESTFul API, Security, JWT</description>
+
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -24,6 +55,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>${tomcat.scope}</scope>
 		</dependency>
 
 		<!-- <dependency>
